--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
+    "d3": "^6.5.0",
     "lodash": "^4.17.20",
     "node-sass": "4.14.1",
     "query-string": "^6.13.8",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/d3": "^6.3.0",
     "@types/lodash": "^4.14.167",
     "@types/react-redux": "^7.1.15",
     "@types/react-router": "^5.1.11",
